# sim-sensory-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: embodied_cognition_grounding_language_models_sensorimotor_norms_20260322_204746.jsonl  probing_internal_representations_senses_smell_taste_LLM_transformer_20260322_204455.jsonl
papers/: README.md
papers/pages/: hicke2025_zero_body_problem_manifest.txt  marjieh2023_llms_predict_sensory_judgments_manifest.txt  wang2025_words_make_llms_perceive_manifest.txt
results/: experiment_results.json  metadata.json  stimuli.json
src/: extract_hidden_states.py  prepare_stimuli.py  run_experiments.py
